# MeatballUIEditor

./: .gitignore  CMakeLists.txt  README.md  todo.md
data/: console.json  init.json
data/cfg/: config.cfg
data/cfg/UI/: console.cfg
data/meatdata/: Console.meatdata  Init.meatdata
include/Meatball/: Config.h  Console.h  ConsoleUI.h  IScene.h  Input.h  MouseCursor.h  OutputColors.h  Shared.h
include/Meatball/Interface/: Button.h  DynamicPanel.h  InputTextBox.h  ScrollBar.h  ScrollTextBox.h  TextButton.h
include/Meatball/Utils/: CvarFuncs.h  Defaults.h  DrawFuncs.h  Json.h  TextButton.h  Utils.h
src/: EditorMode.cpp  EditorMode.h  GameInterface.cpp  GameInterface.h  Main.cpp
